==> lwr20/metabot2/Arduino/MPU9250.cpp <==
#include "MPU9250.h"
#include <SPI.h>
#define CSPIN 4

uint8_t MPU9250Class::readByte(uint8_t reg)
{
	SPI.transfer(CSPIN, reg | 0x80, SPI_CONTINUE);
	uint8_t data = SPI.transfer(CSPIN, 0, SPI_LAST);
	return data;
}

void MPU9250Class::writeByte(uint8_t reg, uint8_t data)
{
	SPI.transfer(CSPIN, reg, SPI_CONTINUE);
	SPI.transfer(CSPIN, data, SPI_LAST);
}
